[package]
name = "ponjuice-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
http = "1.1.0"
reqwest = "0.12.9"
serde_json = "1.0.133"
svg = "0.18.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
traq = "0.1.5"
traq-bot-http = "0.10.1"
